добавил базу данных, только без запросов

--- a/diaryProject/CMakeLists.txt
+++ b/diaryProject/CMakeLists.txt
@@ -13,6 +13,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+#find_package(PostgreSQL REQUIRED)
+#find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
+find_package(Qt6 REQUIRED COMPONENTS Sql)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -130,6 +133,10 @@ else()
 endif()
 
 target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(coursachTry PRIVATE Qt6::Sql)
+#target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets PostgreSQL::PostgreSQL)
+#target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql PostgreSQL::PostgreSQL)
+
 
 set_target_properties(coursachTry PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
