тестовое добавление в бд

--- a/diaryProject/CMakeLists.txt
+++ b/diaryProject/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
-#find_package(PostgreSQL REQUIRED)
+find_package(PostgreSQL REQUIRED)
 #find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
 find_package(Qt6 REQUIRED COMPONENTS Sql)
 
@@ -107,6 +107,9 @@ set(PROJECT_SOURCES
         nullvalueexception.h
 
         filenotexistexception.h
+
+        dbpostgre.cpp
+        dbpostgre.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -134,7 +137,7 @@ endif()
 
 target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(coursachTry PRIVATE Qt6::Sql)
-#target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets PostgreSQL::PostgreSQL)
+target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets PostgreSQL::PostgreSQL)
 #target_link_libraries(coursachTry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql PostgreSQL::PostgreSQL)
 
 
